<resources>

    <string name="app_name">Kent App</string>
    <!-- Strings related to activity_getting_started -->
    <!-- Heading -->
    <string name="getting_started_title">Getting Started</string>

    <!-- Sub-heading -->
    <string name="getting_started_subtitle">Here is a list of actions you will first need to complete</string>
    <string name="enrol">Enrol</string>
    <string name="enrol_subtext">Have you enrolled?</string>
    <string name="it_account">IT Account</string>
    <string name="it_account_subtext">Claim your IT account</string>
    <string name="fees">Fees</string>
    <string name="fees_subtext">Arrange your fee payments</string>
    <string name="accommodation">Accommodation</string>
    <string name="accommodation_subtext">Apply for accommodation</string>
    <string name="immunisation">Immunisation</string>
    <string name="immunisation_subtext">Are you immunisations in date?</string>
    <string name="student_support_and_wellbeing">Student Support &amp; Well-being Service</string>
    <string name="student_support_and_wellbeing_subtext">Have you registered? (if applicable)</string>


    <!-- Text Field -->


    <!-- Buttons -->
    <string name="proceed">Continue ></string>
    <!-- Other -->


    <!-- Strings related to login -->
    <!-- Heading -->
    <string name="title">University of Kent</string>

    <!-- Sub-heading -->
    <string name="subtitle">The UK\'s European university</string>


    <string name="redeemPassword">Forgot your password</string>

    <!-- Text Field -->
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>

    <!-- Buttons -->
    <string name="login">Login ></string>

    <!-- Other -->


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_news_feed">NewsFeed</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="campus_map">Campus Map</string>
    <string name="title_activity_campus_map">CampusMap</string>

    <!-- Strings related to home -->
    <!-- Heading -->


    <!-- Sub-heading -->


    <!-- Text Field -->


    <!-- Buttons -->

    <!-- Other -->
    <string name="contentDescriptionlogo">KSapp</string>

    <!-- Strings related to activity_news -->
    <!-- Heading -->
    <string name="user_welcome_message">Hello User!</string>

    <!-- Sub-heading -->
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="calendar">Calender</string>
    <string name="events">Events</string>
    <string name="social">Social</string>
    <string name="photo">Photos</string>
    <string name="video">Videos</string>
    <string name="news_and_events">News &amp; Events</string>
    <string name="services">Services</string>
    <string name="person_info">About You</string>
    <string name="bio">Bio</string>
    <string name="more">More</string>
    <string name="moodle">Moodle</string>
    <string name="sds">SDS</string>
    <string name="timetable">Timetable</string>

    <string name="user_full_name">Name</string>
    <string name="calender">Calender</string>
    <string name="societies">Societies</string>
    <string name="Moodle">Moodle</string>
    <string name="Map">Map</string>
    <string name="SDS">SDS</string>

    <!-- Field  Contents -->
    <string name="add_bio">+Add Bio/Your Interests and More</string>
    <string name="add_degree">+Add Degree</string>
    <string name="function">function</string>
    <string name="contentDescription">function</string>
    <string name="calender_contents"></string>
    <string name="events_contents"></string>


    <string name="profile_image_description">User Image</string>

    <!-- Buttons -->
    <string name="btnMap">Maps</string>
    <string name="directory">Directory</string>

    <!-- Other -->
    <string name="x">x</string>
    <string name="menu">menu</string>



    <!-- Strings related to activity_news_feed -->

    <!-- Heading -->
    <string name="upcoming_events">Upcoming Events</string>

    <!-- Sub-heading -->

    <string name="news_feed">News</string>




    <!-- Text Field -->

    <!-- Buttons -->


    <!-- Other -->

    <!-- Strings related to activity_news_feed -->
    <!-- Heading -->
    <string name="friends_title">Friends</string>


    <!-- Sub-heading -->
    <string name="friends_recommendations">Recommendations</string>


    <!-- Text Field -->

    <!-- Buttons -->


    <!-- Other -->


    <!-- Strings related to activity_directory -->

    <!-- Heading -->

    <!-- Sub-heading -->

<string name="medical_centre">Medical Centre</string>
    <string name="emergency_loan">Emergency Loan</string>
    <string name="emergency_accommodation">Emergency Accommodation</string>
    <string name="emergency_services">Emergency Services</string>


    <!-- Text Field -->


    <!-- Buttons -->


    <!-- Other -->



    <!-- Strings related to activity_more -->

    <string name="official_kent">Kent Home</string>
    <string name="kent_union">Kent Union</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="googleplus">Google+</string>
    <string name="flickr">Flickr</string>
    <string name="lib_search">Library Search</string>

    <string name="logout">logout</string>



    <!-- Text Field -->


    <!-- Buttons -->


    <!-- Other -->

</resources>
