<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/news_menuBtn"
        android:title="@string/news"
        android:icon="@drawable/news_icon"/>


    <item
        android:id="@+id/calendar_menuBtn"
        android:title="@string/calendar"
        android:icon="@drawable/calendar_icon"/>

    <item
        android:id="@+id/social_menuBtn"
        android:title="@string/social"
        android:icon="@drawable/social_icon2"/>

    <item
        android:id="@+id/maps_menuBtn"
        android:title="@string/maps"
        android:icon="@drawable/maps_icon"/>

    <item
        android:id="@+id/more_menuBtn"
        android:title="@string/more"
        android:icon="@drawable/more_icon"/>
</menu>
