<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:columnCount="8"
        android:rowCount="18">

        <TextView
            android:id="@+id/friends_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="7"
            android:layout_gravity="end"
            android:layout_row="1"
            android:text="@string/more"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/kent_blue"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_margin="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="8dp"
            android:layout_row="3"
            android:height="3dp"
            android:background="@android:color/darker_gray" />

        <HorizontalScrollView
            android:id="@+id/scroll_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="-155dp"
                    android:layout_marginTop="15dp"
                    android:width="40dp"
                    android:ems="10"
                    android:text="@string/home"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:width="42dp"
                    android:ems="10"
                    android:text="@string/profile" />


                <TextView
                    android:id="@+id/friends_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:width="46dp"
                    android:ems="10"
                    android:text="@string/friends" />


                <TextView
                    android:id="@+id/map_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:width="35dp"
                    android:ems="10"
                    android:text="@string/btnMap" />

                <TextView
                    android:id="@+id/social_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:width="40dp"
                    android:ems="10"
                    android:text="@string/social"
                    />

                <TextView
                    android:id="@+id/video_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:width="43dp"
                    android:ems="10"
                    android:text="@string/video" />

                <TextView
                    android:id="@+id/photos_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:width="48dp"
                    android:ems="10"
                    android:text="@string/photo" />

                <TextView
                    android:id="@+id/directory_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:width="60dp"
                    android:ems="10"
                    android:text="@string/directory"
                    />


                <TextView
                    android:id="@+id/settings_hyp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:width="36dp"
                    android:ems="10"
                    android:text="@string/more"
                    android:textColor="@color/kent_blue"
                    android:textStyle="bold" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/divide2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_margin="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:layout_row="4"
            android:height="3dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/official_kent_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="6"
            android:layout_rowSpan="1"
            android:ems="10"
            android:text="@string/official_kent"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/ku_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="7"
            android:text="@string/kent_union"
            android:layout_rowSpan="1"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/moodle_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="8"
            android:text="@string/moodle"
            android:layout_rowSpan="1"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/sds_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="9"
            android:text="@string/sds"
            android:layout_rowSpan="1"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/facebook_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="10"
            android:text="@string/facebook"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/instagram_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="11"
            android:text="@string/instagram"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/twitter_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="12"
            android:text="@string/twitter"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/googleplus_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="13"
            android:text="@string/googleplus"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/flickr_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="14"
            android:text="@string/flickr"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/timetable_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="15"
            android:text="@string/timetable"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/lib_search_hyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_marginBottom="10dp"
            android:layout_row="16"
            android:text="@string/lib_search"
            android:ems="10"
            android:isScrollContainer="true"
            android:textAlignment="textEnd"/>
    </GridLayout>

</RelativeLayout>
